fix: alignment of title on homepage

--- a/src/pages/styles.module.scss
+++ b/src/pages/styles.module.scss
@@ -25,6 +25,8 @@
     @include tap-font-30;
     display: flex;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     flex-wrap: wrap;
     gap: 8px;
   }
